--- a/index.html
+++ b/index.html
@@ -2,32 +2,31 @@
 <html>
 
 <head>
-    <!-- MedievalBro: Kill the bad guys save the queen -->
-    <title>Axe Man Khaladeers Saga</title>
-    <!-- encoding -->
+
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spaceship Attack: Battle of Orion</title>
 
-    <!-- responsive -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- js & libraries -->
-    <script src="js/libraries/phaser.min.js"></script>
-    <script type="text/javascript" src="js/example1.js"></script>
-
-    <style type="text/css">
+    <style>
         body {
             margin: 0;
             padding: auto;
-            font-family: "Times New Roman", sans-serif, serif;
+            font-family: "Times New Roman", sans-serif;
             font-size: 2em;
-            color: white;
             background-color: black;
+            color: white;
         }
 
     </style>
+
+    <!-- js libraries -->
+    <script type="text/javascript" src="js/libraries/phaser.min.js"></script>
+
+
 </head>
 
 <body>
+    <script type="text/javascript" src="js/mainJS.js"></script>
 </body>
 
 </html>
