--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
-
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spaceship Attack: Battle of Orion</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Space War-Battle Day</title>
 
-    <style>
-        body {
-            margin: 0;
-            padding: auto;
-            font-family: "Times New Roman", sans-serif;
-            font-size: 2em;
-            background-color: black;
-            color: white;
-        }
+    <!-- build:css main.min.css -->
+    <link rel="stylesheet" href="css/main.css">
+    <!-- /build -->
 
-    </style>
-
-    <!-- js libraries -->
-    <script type="text/javascript" src="js/libraries/phaser.min.js"></script>
-
-
+    <!-- tensorflow.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.11.2"> </script>
 </head>
 
 <body>
-    <script type="text/javascript" src="js/mainJS.js"></script>
+
+    <div id="Space War-Battle Day-game"></div>
+
+    <!-- build:js custom/phaser-arcade-physics.min.js -->
+    <script src="node_modules/phaser-ce/build/custom/phaser-arcade-physics.min.js"></script>
+    <!-- /build -->
+
+    <!-- build:js bundle.min.js -->
+    <script src="bundle.js"></script>
+    <!-- /build -->
+
 </body>
 
 </html>
