--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- /build -->
 
-    <!-- tensorflow.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.11.2"> </script>
+
 </head>
 
 <body>
@@ -26,6 +25,8 @@
     <script src="bundle.js"></script>
     <!-- /build -->
 
+    <!-- tensorflow.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
 </body>
 
 </html>
