--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!doctype html>
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Space War-Battle Day</title>
+  <meta charset="utf-8">
+  <title>game</title>
 
-    <!-- build:css main.min.css -->
-    <link rel="stylesheet" href="css/main.css">
-    <!-- /build -->
-
+  <!-- build:css main.min.css -->
+  <link rel="stylesheet" href="css/main.css">
+  <!-- /build -->
 </head>
 
 <body>
 
-    <div id="Space War-Battle Day-game"></div>
+  <div id="game-game" class="game"></div>
 
-    <!-- build:js custom/phaser-arcade-physics.min.js -->
-    <script src="node_modules/phaser-ce/build/custom/phaser-arcade-physics.min.js"></script>
-    <!-- /build -->
+  <!-- build:js custom/phaser-arcade-physics.min.js -->
+  <script src="node_modules/phaser-ce/build/custom/phaser-arcade-physics.min.js"></script>
+  <!-- /build -->
 
-    <!-- build:js bundle.min.js -->
-    <script src="bundle.js"></script>
-    <!-- /build -->
+  <!-- build:js bundle.min.js -->
+  <script src="bundle.js"></script>
+  <!-- /build -->
 
 </body>
-
 </html>
+
